banner image update and copiright

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="./favicon.svg">
 
   <!-- 
     - google font link
@@ -47,7 +47,7 @@
 
   <div class="preload" data-preaload>
     <div class="circle"></div>
-    <p class="text">Grilli</p>
+    <p class="text">Premium</p>
   </div>
 
 
@@ -1103,8 +1103,8 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2022 Grilli. All Rights Reserved | Crafted by <a href="https://github.com/codewithsadee"
-            target="_blank" class="link">codewithsadee</a>
+          &copy; 2024 Premium-Funchose. All rights reserved. <a href="https://softwaresystem.uz/"
+            target="_blank" class="link">Software System Pro</a>
         </p>
 
       </div>
