form api succes

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <link rel="preload" as="image" href="./assets/images/2.png">
   <link rel="preload" as="image" href="./assets/images/1.png">
   <link rel="preload" as="image" href="./assets/images/3.png">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
@@ -49,7 +50,6 @@
     <div class="circle"></div>
     <p class="text">Premium</p>
   </div>
-
 
 
 
@@ -101,9 +101,6 @@
 
     </div>
   </div>
-
-
-
 
 
   <!-- 
@@ -220,8 +217,6 @@
 
 
 
-
-
   <main>
     <article>
 
@@ -324,9 +319,6 @@
       </section>
 
 
-
-
-
       <!-- 
         - #SERVICE
       -->
@@ -425,9 +417,6 @@
       </section>
 
 
-
-
-
       <!-- 
         - #ABOUT
       -->
@@ -483,8 +472,6 @@
 
 
 
-
-
       <!-- 
         - #SPECIAL DISH
       -->
@@ -531,9 +518,6 @@
         <img src="./assets/images/shape-9.png" width="351" height="462" loading="lazy" alt="" class="shape shape-2">
 
       </section>
-
-
-
 
 
       <!-- 
@@ -736,9 +720,6 @@
       </section>
 
 
-
-
-
       <!-- 
         - #TESTIMONIALS
       -->
@@ -772,8 +753,6 @@
 
 
 
-
-
       <!-- 
         - #RESERVATION
       -->
@@ -781,18 +760,16 @@
       <section class="reservation" id="contact">
         <div class="container">
           <div class="form reservation-form bg-black-10">
-            <form action="" class="form-left">
+            <form action="" class="form-left" id="form">
               <h2 class="headline-1 text-center reserv-form-title">Contact Us</h2>
-
               <!-- <p class="form-text text-center">
                 Booking request <a href="tel:+88123123456" class="link">+88-123-123456</a>
                 or fill out the order form
               </p> -->
-
               <input type="text" name="name" placeholder="Your Name" autocomplete="off" class="input-field">
               <div class="input-wrapper">
               </div>
-              <input type="tel" name="phone" placeholder="Phone Number" autocomplete="off" class="input-field">
+              <input type="tel" name="phone_number" placeholder="Phone Number" autocomplete="off" class="input-field">
 
               <textarea name="message" placeholder="Message" autocomplete="off" class="input-field"></textarea>
 
@@ -899,9 +876,6 @@
       </section>
 
 
-
-
-
       <!-- 
         - #EVENT
       -->
@@ -994,8 +968,6 @@
 
 
 
-
-
   <!-- 
     - #FOOTER
   -->
@@ -1034,7 +1006,7 @@
             <!-- Subscribe us & Get <span class="span">25% Off.</span> -->
           </p>
 
-          <form action="" class="input-wrapper">
+          <form action="" class="input-wrapper" id="form-subscribe">
             <div class="icon-wrapper">
               <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
 
@@ -1103,17 +1075,14 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 Premium-Funchose. All rights reserved. <a href="https://softwaresystem.uz/"
-            target="_blank" class="link">Software System Pro</a>
+          &copy; 2024 Premium-Funchose. All rights reserved. <a href="https://softwaresystem.uz/" target="_blank"
+            class="link">Software System Pro</a>
         </p>
 
       </div>
 
     </div>
   </footer>
-
-
-
 
 
   <!-- 
@@ -1123,9 +1092,6 @@
   <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
     <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
   </a>
-
-
-
 
 
   <!-- 
