--- a/index.html
+++ b/index.html
@@ -451,16 +451,16 @@
 
           <figure class="about-banner">
 
-            <img src="./assets/images/about-banner.jpg" width="570" height="570" loading="lazy" alt="about banner"
+            <img src="./assets/images/about-banner-1.png" width="570" height="570" loading="lazy" alt="about banner"
               class="w-100" data-parallax-item data-parallax-speed="1">
 
             <div class="abs-img abs-img-1 has-before" data-parallax-item data-parallax-speed="1.75">
-              <img src="./assets/images/about-abs-image.jpg" width="285" height="285" loading="lazy" alt=""
+              <img src="./assets/images/about-banner-2.png" width="285" height="285" loading="lazy" alt=""
                 class="w-100">
             </div>
 
             <div class="abs-img abs-img-2 has-before">
-              <img src="./assets/images/badge-2.png" width="133" height="134" loading="lazy" alt="">
+              <img src="./assets/images/logo-pr-white.png" width="133" height="134" loading="lazy" alt="">
             </div>
 
           </figure>
@@ -479,7 +479,7 @@
       <section class="special-dish text-center" aria-labelledby="dish-label">
 
         <div class="special-dish-banner">
-          <img src="./assets/images/special-dish-banner.jpg" width="940" height="900" loading="lazy" alt="special dish"
+          <img src="./assets/images/new-banner-special.png" width="940" height="900" loading="lazy" alt="special dish"
             class="img-cover">
         </div>
 
