git add service

--- a/index.html
+++ b/index.html
@@ -326,13 +326,12 @@
       <section class="section service bg-black-10 text-center" aria-label="service">
         <div class="container">
 
-          <p class="section-subtitle label-2">Flavors For Royalty</p>
+          <p class="section-subtitle label-2"></p>
 
-          <h2 class="headline-1 section-title">We Offer Top Notch</h2>
+          <h2 class="headline-1 section-title service-title">Premium Funchoses: Unrivaled taste and quality</h2>
 
-          <p class="section-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry lorem Ipsum has been the industrys
-            standard dummy text ever.
+          <p class="section-text service-text">
+            Discover the unique taste and flavor of our premium funchoses. The perfect choice for true gourmets.
           </p>
 
           <ul class="grid-list">
@@ -342,18 +341,18 @@
 
                 <a href="#" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="./assets/images/service-1.jpg" width="285" height="336" loading="lazy" alt="Breakfast"
+                    <img src="./assets/images/service-img-1.png" width="285" height="336" loading="lazy" alt="Breakfast"
                       class="img-cover">
                   </figure>
                 </a>
 
                 <div class="card-content">
 
-                  <h3 class="title-4 card-title">
+                  <!-- <h3 class="title-4 card-title">
                     <a href="#">Breakfast</a>
-                  </h3>
+                  </h3> -->
 
-                  <a href="#" class="btn-text hover-underline label-2">View Menu</a>
+                  <!-- <a href="#" class="btn-text hover-underline label-2">View Menu</a> -->
 
                 </div>
 
@@ -365,12 +364,12 @@
 
                 <a href="#" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="./assets/images/service-2.jpg" width="285" height="336" loading="lazy" alt="Appetizers"
+                    <img src="./assets/images/service-img-2.png" width="285" height="336" loading="lazy" alt="Appetizers"
                       class="img-cover">
                   </figure>
                 </a>
 
-                <div class="card-content">
+                <!-- <div class="card-content">
 
                   <h3 class="title-4 card-title">
                     <a href="#">Appetizers</a>
@@ -378,7 +377,7 @@
 
                   <a href="#" class="btn-text hover-underline label-2">View Menu</a>
 
-                </div>
+                </div> -->
 
               </div>
             </li>
@@ -388,12 +387,12 @@
 
                 <a href="#" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="./assets/images/service-3.jpg" width="285" height="336" loading="lazy" alt="Drinks"
+                    <img src="./assets/images/service-img-3.png" width="285" height="336" loading="lazy" alt="Drinks"
                       class="img-cover">
                   </figure>
                 </a>
 
-                <div class="card-content">
+                <!-- <div class="card-content">
 
                   <h3 class="title-4 card-title">
                     <a href="#">Drinks</a>
@@ -401,7 +400,7 @@
 
                   <a href="#" class="btn-text hover-underline label-2">View Menu</a>
 
-                </div>
+                </div> -->
 
               </div>
             </li>
